converted deepview to use http endpoint and also allow multiple projects

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ mcp = "*"
 google-generativeai = "*"
 python-dotenv = "*"
 pydantic = "*"
+fastapi = "*"
+uvicorn = "*"
+pydantic-settings = "*"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
