feat: add OAuth/OIDC JWT verification, scope enforcement; update docs and compose

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,19 @@ HEALTH_CHECK_INTERVAL=30s
 HEALTH_CHECK_TIMEOUT=10s
 HEALTH_CHECK_RETRIES=3
 HEALTH_CHECK_START_PERIOD=60s
+
+# OAuth / OIDC (Auth0) Configuration
+# Toggle OAuth (enable for ChatGPT, disable for local Windsurf)
+OAUTH_ENABLED=false
+# Auth0 issuer (domain). Include scheme and no path. Trailing slash optional.
+OIDC_ISSUER=https://auth.logzilla.net/
+# API Identifier (Audience) configured in Auth0 API settings
+OIDC_AUDIENCE=https://mcp.logzilla.io/deepview-mcp/mcp
+# Optional: override JWKS URL; otherwise discovered from issuer
+# OIDC_JWKS_URL=https://auth.logzilla.net/.well-known/jwks.json
+# Algorithms accepted
+OIDC_ALGS=RS256
+# Global scopes required (space/comma separated). For now only deepview:read
+OAUTH_REQUIRED_SCOPES=deepview:read
+# Clock skew leeway in seconds
+OAUTH_CLOCK_SKEW_SECONDS=60
