--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,10 @@ OIDC_ALGS=RS256
 OAUTH_REQUIRED_SCOPES=deepview:read
 # Clock skew leeway in seconds
 OAUTH_CLOCK_SKEW_SECONDS=60
+
+# Auth0 Client Credentials (for token helper script)
+# DO NOT COMMIT REAL VALUES
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
+# Optional: override token URL (defaults to ${OIDC_ISSUER%/}/oauth/token)
+# AUTH0_TOKEN_URL=
