--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,12 @@ AUTH0_CLIENT_ID=
 AUTH0_CLIENT_SECRET=
 # Optional: override token URL (defaults to ${OIDC_ISSUER%/}/oauth/token)
 # AUTH0_TOKEN_URL=
+
+# NGINX OAuth Shim Configuration
+# Host interface to bind on the Docker host for the shim. Keep 127.0.0.1 unless
+# Cloudflared (or another proxy/client) must access it from outside the host.
+SHIM_HOST=127.0.0.1
+# Host port to expose the shim on (inside container listens on 8080)
+SHIM_PORT=8080
+# Optional: container name override for the nginx shim
+NGINX_SHIM_CONTAINER_NAME=mcp-nginx-shim
