--- a/nginx/mcp-oauth-shim.conf
+++ b/nginx/mcp-oauth-shim.conf
@@ -6,24 +6,32 @@ server {
     location = /.well-known/openid-configuration {
         proxy_pass https://auth.logzilla.net/.well-known/openid-configuration;
         proxy_set_header Host auth.logzilla.net;
+        proxy_ssl_server_name on;
+        proxy_ssl_name auth.logzilla.net;
     }
 
     # 2) OAuth 2.0 Authorization Server metadata (some clients use this path)
     location = /.well-known/oauth-authorization-server {
         proxy_pass https://auth.logzilla.net/.well-known/openid-configuration;
         proxy_set_header Host auth.logzilla.net;
+        proxy_ssl_server_name on;
+        proxy_ssl_name auth.logzilla.net;
     }
 
     # 3) Authorization endpoint (browser step; just proxy/redirect to Auth0)
     location = /authorize {
         proxy_pass https://auth.logzilla.net/authorize$is_args$args;
         proxy_set_header Host auth.logzilla.net;
+        proxy_ssl_server_name on;
+        proxy_ssl_name auth.logzilla.net;
     }
 
     # 4) Token endpoint (backend token exchange)
     location = /oauth/token {
         proxy_pass https://auth.logzilla.net/oauth/token;
         proxy_set_header Host auth.logzilla.net;
+        proxy_ssl_server_name on;
+        proxy_ssl_name auth.logzilla.net;
     }
 
     # 5) Health passthrough to the app (optional but handy)
