added auth proxy for chatgpt

--- a/.env.example
+++ b/.env.example
@@ -33,11 +33,11 @@ HEALTH_CHECK_START_PERIOD=60s
 # Toggle OAuth (enable for ChatGPT, disable for local Windsurf)
 OAUTH_ENABLED=false
 # Auth0 issuer (domain). Include scheme and no path. Trailing slash optional.
-OIDC_ISSUER=https://auth.logzilla.net/
+OIDC_ISSUER=https://YOUR_TENANT.us.auth0.com/
 # API Identifier (Audience) configured in Auth0 API settings
-OIDC_AUDIENCE=https://mcp.logzilla.io/deepview-mcp/mcp
+OIDC_AUDIENCE=https://mcp.example.com/api
 # Optional: override JWKS URL; otherwise discovered from issuer
-# OIDC_JWKS_URL=https://auth.logzilla.net/.well-known/jwks.json
+# OIDC_JWKS_URL=https://YOUR_TENANT.us.auth0.com/.well-known/jwks.json
 # Algorithms accepted
 OIDC_ALGS=RS256
 # Global scopes required (space/comma separated). For now only deepview:read
@@ -51,12 +51,3 @@ AUTH0_CLIENT_ID=
 AUTH0_CLIENT_SECRET=
 # Optional: override token URL (defaults to ${OIDC_ISSUER%/}/oauth/token)
 # AUTH0_TOKEN_URL=
-
-# NGINX OAuth Shim Configuration
-# Host interface to bind on the Docker host for the shim. Keep 127.0.0.1 unless
-# Cloudflared (or another proxy/client) must access it from outside the host.
-SHIM_HOST=127.0.0.1
-# Host port to expose the shim on (inside container listens on 8080)
-SHIM_PORT=8080
-# Optional: container name override for the nginx shim
-NGINX_SHIM_CONTAINER_NAME=mcp-nginx-shim
